# Arabic_News_Data_Engineering_project

./: .env  Makefile  README.md  compose.yaml
airflow/: Dockerfile
airflow/config/: airflow.cfg
airflow/dags/: news_fetching_dag.py
airflow/plugins/: airflow_local_settings.py  etl-4.1.0-py3-none-any.whl
db/: multiple-databases.sh
etl/config/: config.yml
etl/modules/: pyproject.toml
etl/modules/modules/airflow/: operators.py
etl/modules/modules/config/: reader.py
etl/modules/modules/eventbridge/: kafkaio.py
etl/modules/modules/ingestion/: extractor.py
etl/modules/modules/processing/: kafka_stream_processor.py  nlp_analyzer.py
etl/scripts/: install-packages.sh
etl/spark-jobs/: dummy.py  process.py
jmx-exporter/: kafka-broker.yml
kafka/: Dockerfile.init
kafka/config/: bigquery-sink.json  keyfile.json
kafka/schemas/: ar_news_ana_topic_value.avsc  ar_news_prc_topic_value.avsc  ar_news_raw_topic_value.avsc
kafka/scripts/: init.sh
prometheus/: prometheus.yml
sample-data/: analyzed.json  processed.json  raw.json
spark/config/: log4j2.properties
